--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "beautifulsoup4>=4.14.2",
     "dotenv>=0.9.9",
     "fastapi>=0.117.1",
+    "lxml>=6.0.2",
     "mcp>=1.14.1",
     "requests>=2.32.5",
 ]
