--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = [
     "fastapi>=0.117.1",
     "lxml>=6.0.2",
     "mcp>=1.14.1",
+    "pyaudio>=0.2.14",
     "requests>=2.32.5",
+    "websocket-client==1.8.0",
+    "websockets>=15.0.1",
 ]
 
 [[tool.uv.index]]
