--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "beautifulsoup4>=4.14.2",
     "dotenv>=0.9.9",
     "fastapi>=0.117.1",
+    "loguru>=0.7.3",
     "lxml>=6.0.2",
     "mcp>=1.14.1",
     "pyaudio>=0.2.14",
