--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,15 @@ dependencies = [
     "beautifulsoup4>=4.14.2",
     "dotenv>=0.9.9",
     "fastapi>=0.117.1",
+    "flask>=3.1.2",
+    "flask-cors>=6.0.1",
     "loguru>=0.7.3",
     "lxml>=6.0.2",
     "mcp>=1.14.1",
     "pyaudio>=0.2.14",
+    "python-socketio[asyncio-server]>=5.11",
     "requests>=2.32.5",
+    "uvicorn>=0.36.0",
     "websocket-client==1.8.0",
     "websockets>=15.0.1",
 ]
