--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pyaudio>=0.2.14",
     "python-socketio[asyncio-server]>=5.11",
     "requests>=2.32.5",
+    "streamlit>=1.51.0",
     "uvicorn>=0.36.0",
     "websocket-client==1.8.0",
     "websockets>=15.0.1",
