--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ dependencies = [
     "loguru>=0.7.3",
     "lxml>=6.0.2",
     "mcp>=1.14.1",
+    "openai>=2.14.0",
+    "opencv-python>=4.12.0.88",
     "pyaudio>=0.2.14",
+    "pyautogui>=0.9.54",
+    "python-qt5>=0.1.10",
     "python-socketio[asyncio-server]>=5.11",
     "requests>=2.32.5",
     "streamlit>=1.51.0",
